--- a/useform-hook/package.json
+++ b/useform-hook/package.json
@@ -9,14 +9,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.37",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
+    "d3": "^7.4.4",
     "libphonenumber-js": "^1.9.51",
     "material-ui": "^0.20.2",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
     "react-dropzone": "^12.0.5",
