--- a/threeJS/threejs_sample/package.json
+++ b/threeJS/threejs_sample/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
+    "leva": "^0.10.0",
     "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
