--- a/threeJS/threejs_sample/package.json
+++ b/threeJS/threejs_sample/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
     "leva": "^0.10.0",
+    "maath": "^0.10.8",
     "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
