--- a/threeJS/threejs_sample/package.json
+++ b/threeJS/threejs_sample/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
