--- a/threeJS/threejs_sample/package.json
+++ b/threeJS/threejs_sample/package.json
@@ -13,6 +13,7 @@
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
+    "@react-three/rapier": "^2.0.0",
     "@types/three": "^0.172.0",
     "leva": "^0.10.0",
     "maath": "^0.10.8",
